fixed text and img alignment in 'about me' section

--- a/13_portfolio_example/style.css
+++ b/13_portfolio_example/style.css
@@ -210,6 +210,7 @@ nav:hover #top-nav li a {
 }
 
 .section-a-content {
+  padding: 0 2rem;
   min-width: 40vw;
 }
 
